[project]
name = "luludelulu"
version = "0.1.0"
description = "Bet on whether jokes will land - TCT research platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "fastapi>=0.121.3",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]

#[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"

